--- a/wxlibrary/build.gradle
+++ b/wxlibrary/build.gradle
@@ -3,7 +3,7 @@ android {
     compileSdk rootProject.ext.compile.compileSdkVersion
     namespace "com.mhy.wxlibrary"
     defaultConfig {
-        minSdkVersion  rootProject.ext.compile.minSdkVersion
+        minSdkVersion rootProject.ext.compile.minSdkVersion
         targetSdkVersion rootProject.ext.compile.targetSdkVersion
         versionCode rootProject.ext.compile.versionCode
         versionName rootProject.ext.publish.version
@@ -34,22 +34,17 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
-    
+
 
 }
-////jcent
-//publish {
-//
-//    repoName = 'maven'//maven仓库名
-//    userOrg = rootProject.ext.publish.user// 用户所在组织,好像是用户名
-//    groupId = 'com.mhy.social'// 包名
-//    artifactId = 'wx'// library项目的名字
-//    publishVersion = rootProject.ext.publish.version// 版本
-//    desc = 'build social SDK'//不中文
-//    website = "https://github.com/mahongyin/Social"//你的开源地址，注意，一定要用GitHub地址
-//}
-////Terminal:gradlew clean build bintrayUpload -PbintrayUser=这里填你的JCenter账号 -PbintrayKey=这里填你的APIKey -PdryRun=false
-//
+if (rootProject.ext.publish.isJitpack) {
+//添加发布到jitpack脚本
+    apply from: "jitpack.gradle"
+} else {
+    //发布到artifactory
+    apply from: "artifactory.gradle"
+}
+
 
 dependencies {
     compileOnly 'androidx.appcompat:appcompat:1.2.0'
