--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,8 @@
 ext {
     publish = [
             version: "1.3.1",
-            user   : "mahongyin"
+            user   : "mahongyin",
+            isJitpack: false
     ]
     compile = [
             compileSdkVersion: 31,
@@ -26,6 +27,7 @@ buildscript {
 
     dependencies {
         classpath 'com.android.tools.build:gradle:7.4.2'
+
     }
 }
 
