--- a/socialcommon/build.gradle
+++ b/socialcommon/build.gradle
@@ -51,7 +51,13 @@ android {
 //    website = "https://github.com/mahongyin/Social"//你的开源地址，注意，一定要用GitHub地址
 //}
 ////Terminal:gradlew clean build bintrayUpload -PbintrayUser=这里填你的JCenter账号 -PbintrayKey=这里填你的APIKey -PdryRun=false
-
+if (rootProject.ext.publish.isJitpack) {
+//添加发布到jitpack脚本
+    apply from: "jitpack.gradle"
+} else {
+    //发布到artifactory
+    apply from: "artifactory.gradle"
+}
 dependencies {
 
     compileOnly 'androidx.appcompat:appcompat:1.2.0'
