--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,7 @@ ext {
     publish = [
             version: "1.3.1",
             user   : "mahongyin",
-            isJitpack: false
+            isJitpack: true
     ]
     compile = [
             compileSdkVersion: 31,
@@ -27,7 +27,6 @@ buildscript {
 
     dependencies {
         classpath 'com.android.tools.build:gradle:7.4.2'
-
     }
 }
 
