--- a/alilibrary/build.gradle
+++ b/alilibrary/build.gradle
@@ -4,7 +4,7 @@ android {
     compileSdk rootProject.ext.compile.compileSdkVersion
     namespace "com.mhy.alilibrary"
     defaultConfig {
-        minSdkVersion  rootProject.ext.compile.minSdkVersion
+        minSdkVersion rootProject.ext.compile.minSdkVersion
         targetSdkVersion rootProject.ext.compile.targetSdkVersion
         versionCode rootProject.ext.compile.versionCode
         versionName rootProject.ext.publish.version
@@ -42,8 +42,8 @@ android {
         }
     }
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility JavaVersion.VERSION_11
+        targetCompatibility JavaVersion.VERSION_11
     }
 
     //multiDex的一些相关配置，这样配置可以让你的编译速度更快
