--- a/alilibrary/jitpack.gradle
+++ b/alilibrary/jitpack.gradle
@@ -2,6 +2,7 @@
 apply plugin: 'maven-publish'//jitpack
 
 /*****************jitpack***************/
+//注意：不需要去配置 GROUP_ID、ARTIFACT_ID、VERSION；
 def VERSION_NAME = rootProject.ext.publish.version// 版本
 def GROUP_ID = 'com.gitee.mahongyin.social'
 def ARTIFACT_ID = "ali"
@@ -20,4 +21,74 @@ afterEvaluate {
         }
     }
 }
-//lib模块目录./gradlew publishToMavenLocal
+//lib模块目录./gradlew publishToMavenLocal 发布到mavenLocal() (对应USER_HOME/.m2/文件夹)
+//apply plugin: "maven-publish"
+////该脚本支持android模块和java模块， 默认会发布源码和注释到aar依赖中；
+//afterEvaluate { project ->
+//    if (plugins.hasPlugin('com.android.application') || plugins.hasPlugin('com.android.library')) {
+//        /** Android doc*/
+//        task androidJavadocs(type: Javadoc) {
+//            failOnError false
+//            source = android.sourceSets.main.java.source
+//            classpath += project.files(android.getBootClasspath().join(File.pathSeparator))
+//        }
+//        /** Android doc jar*/
+//        task androidJavadocsJar(type: Jar, dependsOn: androidJavadocs) {
+//            getArchiveClassifier().convention('javadoc')
+//            getArchiveClassifier().set('javadoc')
+//            from androidJavadocs.destinationDir
+//        }
+//        /** Android source jar*/
+//        task androidSourcesJar(type: Jar) {
+//            getArchiveClassifier().convention('sources')
+//            getArchiveClassifier().set('sources')
+//            from android.sourceSets.main.java.source
+//        }
+//    } else if (plugins.hasPlugin("java")) {
+//        /** Java source jar*/
+//        task sourcesJar(type: Jar, dependsOn: classes) {
+//            getArchiveClassifier().convention('sources')
+//            getArchiveClassifier().set('sources')
+//            from sourceSets.main.allSource
+//        }
+//        /** Java doc jar*/
+//        task javadocJar(type: Jar, dependsOn: javadoc) {
+//            getArchiveClassifier().convention('javadoc')
+//            getArchiveClassifier().set('javadoc')
+//            from javadoc.destinationDir
+//        }
+//    }
+//
+//    if (JavaVersion.current().isJava8Compatible()) {
+//        allprojects {
+//            tasks.withType(Javadoc) {
+//                options.addStringOption('Xdoclint:none', '-quiet')
+//            }
+//        }
+//    }
+//    /** publish library with doc and source code */
+//    publishing {
+//        publications {
+//            maven(MavenPublication) {
+//                groupId = GROUP_ID
+//                artifactId = ARTIFACT_ID
+//                version = VERSION_NAME
+//                afterEvaluate {
+//                    if (plugins.hasPlugin('com.android.application') || plugins.hasPlugin('com.android.library')) {
+//                        from components.release
+//                    } else if (plugins.hasPlugin("java")) {
+//                        from components.java
+//                    }
+//                }
+//                if (plugins.hasPlugin('com.android.application') || plugins.hasPlugin('com.android.library')) {
+//                    artifact androidSourcesJar
+//                    artifact androidJavadocsJar
+//                } else if (plugins.hasPlugin("java")) {
+//                    artifact sourcesJar
+//                    artifact javadocJar
+//                }
+//
+//            }
+//        }
+//    }
+//}
