--- a/wblibrary/build.gradle
+++ b/wblibrary/build.gradle
@@ -1,5 +1,3 @@
-import javax.xml.stream.events.Namespace
-
 apply plugin: 'com.android.library'
 
 android {
@@ -34,8 +32,8 @@ android {
 
     }
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility JavaVersion.VERSION_11
+        targetCompatibility JavaVersion.VERSION_11
     }
 
 
