--- a/alilibrary/jitpack.gradle
+++ b/alilibrary/jitpack.gradle
@@ -13,7 +13,8 @@ afterEvaluate {
 //        singleVariant("release")
         publications {
             release(MavenPublication) {
-                from components.release
+                //jitpack 没android
+//                from components.release
                 groupId = GROUP_ID
                 artifactId = ARTIFACT_ID
                 version = VERSION_NAME
