--- a/wxlibrary/jitpack.gradle
+++ b/wxlibrary/jitpack.gradle
@@ -12,10 +12,11 @@ afterEvaluate {
 //        singleVariant("release")
         publications {
             release(MavenPublication) {
-                from components.release
+//                from components.release
                 groupId = GROUP_ID
                 artifactId = ARTIFACT_ID
                 version = VERSION_NAME
+
             }
         }
     }
