--- a/testapp/build.gradle
+++ b/testapp/build.gradle
@@ -63,13 +63,11 @@ dependencies {
 
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
-//    implementation ('com.mhy.social:common:1.3.1'){
-//        changing = true
-//    }
-//    implementation 'com.mhy.social:qq:1.3.1'
-//    implementation 'com.mhy.social:ali:1.3.1'
-//    implementation 'com.mhy.social:wx:1.3.1'
-//    implementation 'com.mhy.social:wb:1.3.1'
+//    implementation 'com.github.mahongyin.social:common:1.3.1'
+//    implementation 'com.github.mahongyin.social:qq:1.3.1'
+//    implementation 'com.github.mahongyin.social:ali:1.3.1'
+//    implementation 'com.github.mahongyin.social:wx:1.3.1'
+//    implementation 'com.github.mahongyin.social:wb:1.3.1'
     implementation project(path: ':socialcommon')
     implementation project(path: ':wxlibrary')
     implementation project(path: ':wblibrary')
