--- a/wblibrary/src/main/AndroidManifest.xml
+++ b/wblibrary/src/main/AndroidManifest.xml
@@ -11,15 +11,25 @@
     </queries>
 	 <application>
         <!--覆盖 aar -->
-        <provider
-            android:name="com.sina.weibo.sdk.content.FileProvider"
+<!--        <provider-->
+<!--            android:name="com.sina.weibo.sdk.content.FileProvider"-->
+<!--            android:authorities="${applicationId}.social.fileprovider"-->
+<!--            android:exported="false"-->
+<!--            android:grantUriPermissions="true"-->
+<!--            tools:replace="android:authorities">-->
+<!--            <meta-data-->
+<!--                android:name="android.support.FILE_PROVIDER_PATHS"-->
+<!--                android:resource="@xml/file_paths"-->
+<!--                tools:replace="android:resource"/>-->
+<!--        </provider>-->
+         <provider
+            android:name="androidx.core.content.FileProvider"
             android:authorities="${applicationId}.social.fileprovider"
             android:exported="false"
-            android:grantUriPermissions="true" >
+            android:grantUriPermissions="true">
             <meta-data
                 android:name="android.support.FILE_PROVIDER_PATHS"
-                android:resource="@xml/file_paths"
-                tools:replace="android:resource"/>
+                android:resource="@xml/file_paths" />
         </provider>
     </application>
 </manifest>
