--- a/qqlibrary/build.gradle
+++ b/qqlibrary/build.gradle
@@ -66,6 +66,6 @@ dependencies {
     compileOnly 'androidx.appcompat:appcompat:1.2.0'
     compileOnly project(path: ':socialcommon')
 //    implementation 'com.mhy.social:common:1.2.0'
-    api files('libs/open_sdk_lite3.5.15.jar')
+    api files('libs/open_sdk_3.5.17.3.jar')
 //    implementation 'com.tencent.tauth:qqopensdk:+'//3.53.0
 }
