--- a/build.gradle
+++ b/build.gradle
@@ -1,15 +1,15 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 ext {
     publish = [
-            version  : "1.3.4",
-            user     : "mahongyin",
+            version  : "1.3.5",
+            //user     : "mahongyin",
             isJitpack: false,
     ]
     compile = [
             compileSdkVersion: 31,
             targetSdkVersion : 31,
             minSdkVersion    : 22,//微博sdk需要22
-            versionCode      : 3
+            versionCode      : 5
     ]
 }
 
